--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             <nav class="nav d-xs-none" id="navbar">
                 <a class="header-button scroll d-lg-none" href="#registration">Реєстрація</a>
-                <a class="nav-link" href="#intro">Superagent</a>
+                <a class="nav-link" href="#intro">Superagent+</a>
                 <a class="nav-link" href="#objective">Задачі</a>
                 <a class="nav-link" href="#can">Можливості</a>
                 <a class="nav-link" href="#command">Команда</a>
